[package]
name = "spass"
version = "0.1.1"
edition = "2021"

[dependencies]
aho-corasick = "1.1.3"
anyhow = "1.0.86"
arboard = "3.4.0"
clap = { version = "4.5.9", features = ["derive", "string"] }
ctrlc = "3.4.4"
gpgme = "0.11.0"
rand = "0.8.5"
rpassword = "7.3.1"
tempfile = "3.11.0"
thiserror = "2.0.3"
walkdir = "2.5.0"
